--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
+   <script src="https://kit.fontawesome.com/f6d43c0efc.js" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
   <body>
